2010-10-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt
	* flumotion/component/decoders/generic/generic.py:
	Fix generic decoder's synchronisation element:
	 - Make it thread safe (audio and video can be in different threads).
	 - Retimestamp buffers using a common sync point for audio and video
		and adding the buffer's running time calculated from the start of
		the current segment to avoid desynchronisations whilst increasing
		continuously the timetamps of the outgoing buffers.
	 - Only drop new segment event and forward the rest.
	 - Send a flumotion-reset event when the decoder is restarted.

2010-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent010.py:
	  Log timestamp discontinuities with nanosecond precision, so we
	  actually see the 1 ns discontinuity on Theora.

2010-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/format.py:
	  Support displaying of negative values in seconds.
	  Fix up docstring.
	  This fixes displaying discontinuity duration as
	  6 days 23:59:59:999999999 when it's minus 1 nanosecond,
	  which sometimes seems to happen in the ogg-muxer for theora
	  streams.
	* flumotion/test/test_common_format.py:
	  Add a test for it.

2010-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/styleguide:
	* flumotion/test/test_common_format.py:
	  Don't use assert for comparisons in tests; it doesn't log the
	  actual value when the test fails.

2010-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/styleguide:
	* flumotion/component/converters/overlay/overlay.py:
	  Logging about every buffer should be at LOG level.

2010-09-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Julien Le Goff
	* flumotion/component/feedcomponent.py:
	factor out the buffer callback to ease subclassing
	the muxer component
